<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:id="@+id/layout">
    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/scrollView"
            android:layout_alignParentTop="true" android:layout_alignParentStart="true">

    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true" android:layout_alignParentStart="true"
            >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text_amount"
            android:id="@+id/text_amount" android:layout_alignParentTop="true" android:layout_alignParentStart="true"
            android:layout_marginTop="42dp" android:layout_marginLeft="25dp" android:layout_marginRight="10dp"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/field_amount"
            android:layout_alignTop="@+id/text_amount" android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/text_amount" android:layout_marginLeft="80dp" android:layout_marginRight="20dp"
            android:layout_alignStart="@+id/text_amount" android:inputType="numberDecimal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text_paymethod"
            android:id="@+id/text_paymethod"
            android:layout_marginLeft="25dp" android:layout_below="@+id/field_amount"
            android:layout_alignStart="@id/layout"/>
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spin_paymethod"
            android:layout_marginLeft="175dp"
            android:layout_marginRight="25dp" android:layout_alignTop="@+id/text_paymethod"
            android:layout_alignEnd="@+id/field_amount"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_date"
            android:onClick="setDate"
            android:id="@+id/button2" android:layout_below="@+id/text_paymethod"
            android:layout_alignStart="@+id/text_paymethod"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/ref_chck"
            android:id="@+id/text_refOrCheck"
            android:layout_marginLeft="25dp" android:layout_marginRight="10dp"
            android:layout_below="@+id/spin_paymethod" android:layout_alignStart="@id/layout"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/field_refOrChck" android:layout_below="@+id/spin_paymethod"
            android:layout_alignStart="@+id/spin_paymethod"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/description"
            android:id="@+id/text_description" android:layout_marginLeft="25dp" android:layout_marginRight="10dp"
            android:layout_below="@+id/field_refOrChck" android:layout_alignStart="@id/layout"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/field_description" android:layout_below="@+id/field_refOrChck"
            android:layout_toEndOf="@+id/text_description"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/tax"
            android:id="@+id/text_tax" android:layout_marginLeft="25dp" android:layout_marginRight="10dp"
            android:layout_below="@+id/field_description" android:layout_alignStart="@id/layout"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/field_tax" android:layout_alignTop="@+id/text_tax"
            android:layout_alignEnd="@+id/field_refOrChck" android:layout_toEndOf="@+id/text_tax"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/quantity"
            android:id="@+id/text_quantity" android:layout_marginLeft="25dp" android:layout_marginRight="10dp"
            android:layout_below="@+id/field_tax" android:layout_alignStart="@id/layout"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/field_quantity" android:layout_below="@+id/field_tax" android:layout_toEndOf="@+id/text_amount"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/payee"
            android:id="@+id/text_payee" android:layout_marginLeft="25dp" android:layout_marginRight="10dp"
            android:layout_below="@+id/field_quantity" android:layout_alignStart="@id/layout"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/field_payee" android:layout_alignTop="@+id/text_payee"
            android:layout_alignEnd="@+id/field_refOrChck" android:layout_toEndOf="@+id/text_payee"
            android:inputType="text"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/tags"
            android:id="@+id/text_tags" android:layout_marginLeft="25dp" android:layout_marginRight="10dp"
            android:layout_below="@+id/field_payee" android:layout_alignStart="@id/layout"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/field_tags"
            android:layout_below="@+id/field_payee" android:layout_alignStart="@+id/field_payee"
            android:layout_alignParentEnd="true"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_save"
            android:id="@+id/button"
            android:onClick="ReturnMainUpdate"
            android:layout_below="@+id/field_tags" android:layout_alignEnd="@+id/field_quantity"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="DELETE"
                android:id="@+id/button1"
                android:onClick="ReturnMainDelete"
                android:layout_alignParentBottom="true" android:layout_toStartOf="@+id/button"/>

    </RelativeLayout>
</ScrollView>
</RelativeLayout>